<resources>
    <string name="app_name">MangaApp</string>
    <string name="title">Title</string>
    <string name="webtoons">WebToons</string>
    <string name="example">example</string>
    <string name="creator">Creator:</string>
    <string name="rating">Rating:</string>
    <string name="description">Description:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourites">Favourites</string>
    <string name="no_items_found">No Items Found</string>
</resources>