<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/progressBar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_25sdp"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/txtTitle"/>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_200sdp"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"
            android:id="@+id/webToonImage"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_25sdp"
            android:text="@string/creator"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/webToonImage"
            android:textStyle="bold"
            android:id="@+id/txtCreator"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sdp"
            android:text="@string/example"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/txtCreator"
            app:layout_constraintTop_toTopOf="@id/txtCreator"
            app:layout_constraintBottom_toBottomOf="@id/txtCreator"
            android:layout_marginStart="@dimen/_2sdp"
            android:id="@+id/creatorName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_25sdp"
            android:text="@string/rating"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@id/txtCreator"
            app:layout_constraintTop_toBottomOf="@id/txtCreator"
            android:textStyle="bold"
            android:id="@+id/txtRate"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sdp"
            android:text="@string/example"
            app:layout_constraintStart_toEndOf="@id/txtRate"
            app:layout_constraintTop_toTopOf="@id/txtRate"
            app:layout_constraintBottom_toBottomOf="@id/txtRate"
            android:layout_marginStart="@dimen/_2sdp"
            android:textStyle="italic"
            android:id="@+id/rate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_25sdp"
            android:text="@string/description"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@id/txtCreator"
            app:layout_constraintTop_toBottomOf="@id/txtRate"
            android:textStyle="bold"
            android:id="@+id/txtDescription"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.95"
            android:textSize="@dimen/_20sdp"
            android:text="@string/example"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDescription"
            android:layout_marginStart="@dimen/_2sdp"
            android:id="@+id/description"
            android:justificationMode="inter_word"
            android:textStyle="italic"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>